--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>GAME?</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script src="main.js"></script>
+  </body>
+</html>
